external-crates/move/crates/move-compiler/tests/move_2024/parser/inferred_string_invalid_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_2024/parser/inferred_string_invalid_type.move:4:26
  │
4 │     fun test() { let _x: S = "inferred stringŻ"; }
  │                          ^   ------------------ Given: string
  │                          │    
  │                          Invalid type annotation
  │                          Expected: 'a::m::S'

warning[W04039]: unable to determine princiapl type for literal
  ┌─ tests/move_2024/parser/inferred_string_invalid_type.move:4:30
  │
4 │     fun test() { let _x: S = "inferred stringŻ"; }
  │                              ^^^^^^^^^^^^^^^^^^ Could not determine a concrete type for this string literal, so defaulting to 'vector<u8>'
  │
  = To avoid this warning, add an explicit annotation, e.g., 'b"<const>"'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
